<resources>
    <string name="app_name">File Expert</string>
    <string name="text_viewer">File Expert Text File Viewer</string>
    <string name="hide_toolbar">Hide Toolbar</string>
    <string name="show_toolbar">Show Toolbar</string>
    <string name="save">Save</string>
    <string name="speech">Speech</string>
    <string name="save_ask">Do you want to save this file?</string>
    <string name="save_ok">Save Successful</string>
    <string name="save_fail">Save Fail</string>
    <string name="language">English</string>
    <string name="exit_twice">Press BACK again to exit File Expert</string>
    <string name="donation">Donate</string>
    <string name="tasks">Task</string>
    <string name="task_manager">Task Manager</string>
    <string name="kill">Kill</string>
    <string name="avail_mem">Available Memory</string>
    <string name="running_tasks">Running Tasks</string>
    <string name="donate_btn">Please click below Paypal button to make a kindly donation to us. Thank you.\nPress back to cancel.</string>
    <string name="donate_dlg_msg">If you really think that FE could change your way of managing and sharing files, please consider to make a donation to us.\nPlease note that FE is freeware, you can use all features and functions WITHOUT any donations.If you want to donate us in the future please choose Donate from Menu.\nThis dialog will show only once.\nThank you.</string>
    <string name="donate_yes">YES, DONATE!</string>
    <string name="donate_thank_you">Donation has successfully accepted by Paypal!\nThank you very much for your donation!\nYour donation will be used to help me to continue to provide free Android apps to all users.\nWe will provide value-add services and features to our donate users in the future version.</string>
    <string name="donate_no">NO, Continue using</string>
    <string name="up">Up Dir</string>
    <string name="detail">Details</string>
    <string name="detail_type">Type: </string>
    <string name="file">File</string>
    <string name="directory">Folder</string>
    <string name="detail_lm">Last Modified: </string>
    <string name="detail_size">Size(Bytes): </string>
    <string name="computing_dir_size">Computing folder size now, please wait...</string>
    <string name="working">Working</string>
    <string name="http_on">HTTP</string>
    <string name="ftp_on">FTP</string>
    <string name="new_folder">New Dir</string>
    <string name="home">Home</string>
    <string name="oper">Oper</string>
    <string name="back">Back</string>
    <string name="grid_mode">Grid</string>
    <string name="list_mode">List</string>
	<string name="batch_mode_on">Batch On</string>
	<string name="batch_mode_off">Batch Off</string>
    <string name="info_collect_warn">We can use a third-party library to collect some application running information like app crash report, memory usage and other technical information.\nPlease notice that we DO NOT collect any of personal information about our users. All information we collect will be used to help FE to become better and better.\nIf you allow us to do this, please choose YES,PLEASE otherwise please choose NO.\nThank you very much for your cooperation</string>
    <string name="info_yes">YES, PLEASE</string>
    <string name="info_no">NO, THANKS</string>
    <string name="info_title">Info Collect Confirmation</string>
    <string name="search_smb_svr">Search for Anonymous SMB Servers</string>
    <string name="search_smb_war">Search for anoymous SMB servers may take 5 or more minutes to finish depends on your netwrok.\nDo you really want to search for SMB servers? You also can input those info by adding a new SMB server.\nThis feature also does not support Servers in Windows domain</string>
    <string name="disable_media_pic">Hide Pics for Media Detection</string>
    <string name="enable_media_pic">Show Pics for Media Detection</string>
    <string name="reboot_requ">Please reboot your phone to take effort</string>
    <string name="open_in_market">Open with Market</string>
    <string name="selall">Select All</string>
    <string name="removeall">Clear All</string>
    <string name="backup">Backup</string>
    <string name="backup_to">Successfully backup selected apps to: </string>
    <string name="simple_list_title">Simple List Mode</string>
    <string name="simple_list">Only show entry name on the list entry</string>
    <string name="mount">Mount</string>
    <string name="mount_ok">Mount OK! - Mounted to: </string>
    <string name="mount_fail">Mount FAILED!</string>
    <string name="root_fail">Can not get root access!</string>
    <string name="mount_warn">We need ROOT access to perform this operation. If your phone is already rooted, please choose YES when you are asked to give access to FE.\nThis feature also requires CM customized firmware installed on your phone. We do not support official firmware.\nIf your phone is granted with those requirements, please choose CONFIRM otherwise choose CANCEL</string>
    <string name="share_close_ok">Sharing service closed</string>
    <string name="default_sharing_dir">Set As Default Sharing Dir</string>
    <string name="wifi_disconnect">WIFI is disconnected! Still try to open this sharing server?</string>
    <string name="port_root_warning">Cannot use port number below 1024.Please use another port number.\nFor FTP, do not use port 4000-4199, File Expert will use them to transfer data in FTP passive mode</string>
    <string name="http_setting">Web Settings</string>
    <string name="http_port">HTTP Server Port</string>
    <string name="sea_desr">Input the keyword of the folder or file name that you want to look for, or input the regular expression to match:</string>
    <string name="uninstall">Uninstall</string>
    <string name="sub_dir">Search Sub Directories</string>
    <string name="reg_exp">Regular Expression</string>
    <string name="ignore_case">Case Insensitive</string>
    <string name="search">Search</string>
    <string name="any_access">Anonymous</string>
    <string name="smb_setting">SMB Settings</string>
    <string name="smb_buf">SMB Streaming Buffer Size: (Bytes)</string>
    <string name="share_domain">Server Domain(leave empty if N/A):</string>
    <string name="share_ip">Server IP Address or computer name:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="ftp_setting">FTP Settings</string>
    <string name="ftp_user">FTP User Name: </string>
    <string name="ftp_pass">FTP Password: </string>
    <string name="ftp_port">FTP Port: </string>
    <string name="auto_sd_title">Auto SD</string>
    <string name="auto_sd">Auto open SD card directory while startup</string>
    <string name="use_list_title">List</string>
    <string name="use_list">Default to use list mode to show directory contents</string>
    <string name="no_sleep_title">Wake Lock</string>
    <string name="no_sleep">Prevent device sleeping while HTTP WIFI sharing is enabled</string>
    <string name="no_sleep_ftp">Prevent device sleeping while FTP WIFI sharing is enabled</string>
    <string name="start_dir">Set to start location</string>
    <string name="info">Info</string>
    <string name="create_somthing">New...</string>
    <string name="close_share">Close All Sharing Services</string>
    <string name="open">Open</string>
    <string name="batch">Batch</string>
    <string name="batch_run">Batch Play/Execute/Install</string>
    <string name="add_new_smb_svr">Add New SMB Server</string>
    <string name="exit_app">Exit</string>
    <string name="settings_menu">Settings</string>
    <string name="mode_change">Change View Mode</string>
    <string name="open_share">Open Remote Share Folder</string>
    <string name="open_app_list">Open Installed Applications</string>
    <string name="about">About</string>
    <string name="add_bookmark">Add To Bookmark</string>
    <string name="open_bookmark">Open Bookmarks</string>
    <string name="network_share">Network Share</string>
    <string name="hide_tabs">Hide Tabs</string>
    <string name="Okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="file_operation">File Operations</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="install_all_apk">Install All APK Packages</string>
    <string name="setup_http_share">Share via HTTP(Web)</string>
    <string name="setup_ftp_share">Share via FTP</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_type">By Type</string>
    <string name="sort_by_last_modify">By Last Modified</string>
    <string name="sort_by_size">By Size</string>
    <string name="show_hidden_dirs_title">Hidden Dir</string>
    <string name="show_hidden_dirs">Show Hidden directories which contains . in its filename</string>
	<string name="encoding">Encodings</string>
	<string name="ftp_encoding">FTP Encodings</string>
	<string name="pref_ftp_encoding">Set the encoding used on FTP transmitting, change to a different one if you meet unreadable chars</string>
	<string name="slient_install">Silent Install APK</string>
	<string name="slient_install_desc">Install APK packages without prompt.\nROOT is required.\nWarning: Enable this means you allows FE to install any APKs you selected.</string>
	<string name="apk_location">APK Install Location</string>
	<string name="apk_install_loc_desc">Set the default install location of APKs, only function on Froyo if APP2SD is enabled</string>
	<string name="silent_uninstall">Silent Uninstall App</string>
	<string name="silent_uninstall_desc">Uninstall App without prompt.\nROOT is required.\nWarning: Enable this means you allows FE to uninstall app you selected.</string>
	<string name="openwith">Open With</string>
	<string name="share">Share</string>
	<string name="thumbnails">Thumbnails</string>
	<string name="thumbnails_info">Show thunmbnails, disable it to improve performance</string>
	<string name="apk_icon">APK Icon</string>
	<string name="apk_icon_info">Show icon of APK files, support all Android version</string>
	<string name="file_explorer_setting">File Explorer Settings</string>
	<string name="app_manager_settings">App Manager Settings</string>
	<string name="web_page_index">Allow Web Paging</string>
	<string name="web_page_detail">If enabled, we will page on web directory listing. Useful when there are too many files on sdcard</string>
	<string name="all_apps">Show All Apps</string>
	<string name="all_apps_detail">Select it to show all apps on App Manager including system apps</string>
	<string name="notify_icon">Notification Icon</string>
	<string name="notify_icon_detail">Show notification icon on taskbar, if you feel annoying you can disable it</string>
	<string name="http_user_name">Web User Name</string>
	<string name="http_password">Web Password</string>
	<string name="weblogin">Web Login</string>
	<string name="weblogin_detail">Enable this will requires Web login on every HTTP connect sessions</string>
	<string name="save_mul_title">Save Multiple Results</string>
    <string name="save_mul_detail">Save all multiple choice results while going to another directories</string>
        <string name="menu_mount_system">Mount</string>
        <string name="set_permission">Permission</string>
        <string name="perm_owner">Owner</string>
        <string name="perm_group">Group</string>
        <string name="perm_all">All</string>
        <string name="perm_read">Read</string>
        <string name="perm_write">Write</string>
        <string name="perm_exec">Exec</string>
        <string name="empty"> </string>
</resources>