<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="first_preferencescreen">
        
	<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/file_explorer_setting"
		>
    <CheckBoxPreference
            android:key="FileExpertAutoSdCard"
            android:summary="@string/auto_sd"
            android:title="@string/auto_sd_title"
            />
    <CheckBoxPreference
            android:key="FileExpertDefaultListMode"
            android:summary="@string/use_list"
            android:title="@string/use_list_title" 
            />
    <CheckBoxPreference
            android:key="FileExpertMultipleSelect"
            android:summary="@string/save_mul_detail"
            android:title="@string/save_mul_title" 
            />
    <CheckBoxPreference
            android:key="FileExpertSimpleList"
            android:summary="@string/simple_list"
            android:title="@string/simple_list_title" />
    <CheckBoxPreference
            android:key="FileExpertShowHiddenDirs"
            android:summary="@string/show_hidden_dirs"
            android:title="@string/show_hidden_dirs_title" />
    <CheckBoxPreference
            android:key="FileExpertThumbnails"
            android:summary="@string/thumbnails_info"
            android:title="@string/thumbnails" />
    <CheckBoxPreference
            android:key="FileExpertApkIcon"
            android:summary="@string/apk_icon_info"
            android:title="@string/apk_icon" />
    <CheckBoxPreference
            android:key="FileExpertNotifyIcon"
            android:summary="@string/notify_icon_detail"
            android:title="@string/notify_icon" />
    </PreferenceScreen>
       
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/ftp_setting"
	>
    <CheckBoxPreference
            android:key="FileExpertFtpWakelock"
            android:summary="@string/no_sleep_ftp"
            android:title="@string/no_sleep_title" />	
    <EditTextPreference
    	android:key="FileExpertFtpUserName"
    	android:title="@string/ftp_user"
    />
    <EditTextPreference
    	android:key="FileExpertFtpUserPassword"
    	android:title="@string/ftp_pass"
    	android:password="true"
    />
    <EditTextPreference
    	android:key="FileExpertFtpPortString"
    	android:title="@string/ftp_port"
    />
    <ListPreference
        android:key="FileExpertFtpEncoding"
        android:title="@string/ftp_encoding"
        android:summary="@string/pref_ftp_encoding"
        android:entries="@array/ftp_encodings"
        android:entryValues="@array/ftp_encodings_values"
        android:dialogTitle="@string/encoding" 
    />
    </PreferenceScreen>
    
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/http_setting"
	>
    <CheckBoxPreference
            android:key="FileExpertHttpWakelock"
            android:summary="@string/no_sleep"
            android:title="@string/no_sleep_title" />	
    <CheckBoxPreference
        android:key="FileExpertWebPageIndex"
        android:summary="@string/web_page_detail"
        android:title="@string/web_page_index"
        />
    <CheckBoxPreference
        android:key="FileExpertWebLogin"
        android:summary="@string/weblogin_detail"
        android:title="@string/weblogin"
        />
    <EditTextPreference
    	android:key="FileExpertHttpPortString"
    	android:title="@string/http_port"
    />
    <EditTextPreference
    	android:key="FileExpertWebUsername"
    	android:title="@string/http_user_name"
    	android:dependency="FileExpertWebLogin"
    />
    <EditTextPreference
    	android:key="FileExpertWebPassword"
    	android:title="@string/http_password"
    	android:dependency="FileExpertWebLogin"
    	android:password="true"
    />
    <PreferenceCategory
    	android:title="@string/smb_setting"	
    />
    <EditTextPreference
    	android:key="FileExpertSmbStreamBufSize"
    	android:title="@string/smb_buf"
    />    
    </PreferenceScreen>

    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/app_manager_settings"
	>
    <CheckBoxPreference
            android:key="FileExpertShowAllApp"
            android:summary="@string/all_apps_detail"
            android:title="@string/all_apps"
            />
    <CheckBoxPreference
            android:key="FileExpertSlientInstallApk"
            android:summary="@string/slient_install_desc"
            android:title="@string/slient_install"
            />
    <ListPreference
        android:key="FileExpertApkInstallLocation"
        android:title="@string/apk_location"
        android:summary="@string/apk_install_loc_desc"
        android:entries="@array/apk_location"
        android:entryValues="@array/apk_location_values"
        android:dialogTitle="@string/apk_location"
        android:dependency="FileExpertSlientInstallApk"
        />
    <CheckBoxPreference
            android:key="FileExpertSlientUninstallApk"
            android:summary="@string/silent_uninstall_desc"
            android:title="@string/silent_uninstall"
            />
	</PreferenceScreen>
	    
</PreferenceScreen>