<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:title="@string/file_operation">
	<menu>
    		<item android:id="@+id/FILE_DELETE"
          	android:title="@string/delete" 
          	/>
    		<item android:id="@+id/FILE_COPY"
          	android:title="@string/copy" 
          	/>
    		<item android:id="@+id/FILE_CUT"
          	android:title="@string/cut"
          	/>
    		<item android:id="@+id/FILE_RENAME"
          	android:title="@string/rename"
          	/>
    		<item android:id="@+id/FILE_SEARCH"
          	android:title="@string/search"
          	/>        	
    </menu>
    </item>
	<item android:id="@+id/FILE_SHARE"
		  android:title="@string/network_share">
	<menu>	
    <item android:id="@+id/FILE_SHARE_HTTP"
    	  android:title="@string/setup_http_share"
    	  />
    <item android:id="@+id/FILE_SHARE_FTP"
    	  android:title="@string/setup_ftp_share"
    	  />
    </menu>
    </item>
    <item android:id="@+id/INSTALL_ALL_APK"
          android:title="@string/install_all_apk"
          />    
    <item android:id="@+id/FILE_ZIP"
    	  />
    <item android:id="@+id/FILE_BOOKMARK"
    	  android:title="@string/add_bookmark"
    	  />
    <item android:id="@+id/FILE_SHARING_DIR"
    	  android:title="@string/default_sharing_dir"
    	  />
    <item android:id="@+id/FILE_START_DIR"
    	  android:title="@string/start_dir"
    	  />
    <item android:id="@+id/FILE_MEDIA"
    	  />    	  
    <item android:id="@+id/SMB_MOUNT"
    	  android:title="@string/mount"
    	  />
    <item android:id="@+id/FILE_DETAIL"
    	  android:title="@string/detail"
    	  /> 
    <item android:id="@+id/FILE_OPEN_WITH"
    	  android:title="@string/openwith"
    	  />
    <item android:id="@+id/FILE_SHARE_WITH"
          android:title="@string/share"
    	  />  
    <item android:id="@+id/FILE_PERMISSION"
          android:title="@string/set_permission"
    	  /> 
</menu>
