<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/smb_ip_dlg"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<ScrollView
	android:id="@+id/sv_smb_server"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/share_domain"
    	/>
	<EditText
		android:id="@+id/smb_domain_et"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>    
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/share_ip"
    	/>
	<EditText
		android:id="@+id/smb_ip_et"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/user_name"
    	/>
	<EditText
		android:id="@+id/smb_user_et"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    />
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/password"
    	/>
	<EditText
		android:id="@+id/smb_password_et"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="true"	
	/>
	<CheckBox
		android:id="@+id/smb_cb"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/any_access"
	/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<Button
			android:id="@+id/btn_smb_ip_ok"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:text="@string/Okay"
		/>
		<Button
			android:id="@+id/btn_smb_ip_cancel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:text="@string/cancel"
		/>
		<Button
			android:id="@+id/btn_smb_ip_clear"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:text="@string/clear"
		/>
	</LinearLayout>
</LinearLayout>	
</ScrollView>
</LinearLayout>