<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<LinearLayout android:paddingLeft="60dp"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center">
		<TextView android:text="@string/perm_read" android:layout_gravity="center"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<TextView android:text="@string/perm_write" android:layout_gravity="center"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<TextView android:text="@string/perm_exec" android:layout_gravity="center"
			android:layout_width="60dp" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:text="@string/perm_owner" android:gravity="right"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/user_r" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/user_w" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/user_x" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:text="@string/perm_group" android:gravity="right"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/group_r" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/group_w" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/group_x" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:text="@string/perm_all" android:gravity="right"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/all_r" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/all_w" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/all_x" android:checked="false"
			android:layout_width="60dp" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/set_perm_ok"
			android:text="@string/apply" android:layout_gravity="center_vertical"
			android:layout_weight="1"></Button>
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/set_perm_cancel"
			android:text="@string/cancel" android:layout_gravity="center_vertical"
			android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>